# fastapi

./: .env.example  .gitignore  Dockerfile  README.md  aerich.ini  alembic.ini  app.py  consumer.py  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  exceptions.py  kafka.yml  logs  m.md  main.py  manage.py  models.py  nginx.conf  pyproject.toml  readme.md  requirements.txt  router.py  schemas.py  services.py  settings.py
apache-kafka/: Dockerfile  readme  script.sh
app/: main.py  models.py  routes.py  schemas.py  services.py
auth/: models.py  schemas.py  urls.py  validators.py
base/: models.py  schemas.py  services.py  signals.py  tasks.py  urls.py  views.py
books/: models.py  urls.py
broker/: consumer.py  producer.py
core/: __init__.py  celery.py  cli.py  database.py  exceptions.py  helpers.py  kafka.py  mails.py  medias.py  middlewares.py  readme.md  router.py  schemas.py  security.py  settings.py  settings2.py  urls.py  utils.py  validators.py  views.py
database/: base.py  helpers.py  readme.md  validators.py
django/: .gitignore  Dockerfile  consumer.py  docker-compose.override.yml  docker-compose.yml  requirements.txt
docker/: nginx.conf
events/: README.md  consumer.py  database.py  main.py  models.py  settings.py
fastapi/: .gitignore  Dockerfile  consumer.py  docker-compose.yml  main.py  models.py  producer.py  requirements.txt  router.py  schemas.py  services.py  settings.py
migrations/: readme.md
models/: auth.py  base.py  message.py  products.py  stores.py  users.py
notifications/: .gitignore  README.md  consumer.py  m.py  main.py  pyproject.toml  requirements.txt
polls/: models.py
posts/: consumer.py  database.py  models.py  producers.py  routes.py  schemas.py  settings.py
repositories/: base.py  message.py  users.py
routes/: auth.py  base.py  users.py  (+1 more)
users/: README.md  consumer.py  main.py  producers.py  pyproject.toml  routes.py  schemas.py  tasks.py
users/core/: kafka.py  settings.py
users/models/: user.py
users/repositories/: user.py
users/routes/: base.py  user.py
users/schemas/: base.py  user.py
users/services/: user.py
users/signals/: user.py
users/tasks/: user.py
(+182 files in other folders)
