[tool.poetry]
name = "fastapi-apache-kafka"
version = "0.1.0"
description = "Kafka demo"
authors = ["Ckam <ckam225@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.0"
uvicorn = "^0.17.6"
aiokafka = "^0.7.2"
tortoise-orm = "^0.18.1"
loguru = "^0.6.0"
pydantic = {extras = ["email"], version = "^1.9.0"}

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
autopep8 = "^1.6.0"

[tool.poetry.scripts]
serve = "uvicorn main:app --reload --host 0.0.0.0"
server = "python manage.py"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
